# wolfMQTT

./: .gitignore  AGENTS.md  BROKER.md  CLAUDE.md  CMakeLists.txt  ChangeLog.md  Makefile.am  README.md  autogen.sh  commit-tests.sh  configure.ac  pre-commit.sh  wolfmqtt.sln  wolfmqtt.vcxproj  wolfmqtt.vcxproj.filters
.github/actions/build-wolfssl/: action.yml
.github/workflows/: broker-check.yml  cifuzz.yml  cmake-build.yml  codespell.yml  coverity-scan-fixes.yml  docker-Espressif.yml  fsanitize-check.yml  fuzz.yml  macos-check.yml  mqtt-sn-check.yml  multi-compiler.yml  sanitizer.yml  sbom.yml  sec-websocket-test.yml  threadx.yml  ubuntu-check-curl.yml  ubuntu-check.yml  websocket-test.yml  windows-check.yml  zephyr.yml
AI/: build-embedded.md  build-linux.md  build-windows.md  contributing.md
IDE/: include.am
IDE/ARDUINO/: README.md  include.am  wolfmqtt-arduino.sh  wolfmqtt_client.ino
IDE/ARDUINO/wolfmqtt_client/: wolfmqtt_client.ino
IDE/Espressif/: README.md  include.am
IDE/Espressif/ESP-IDF/: README.md  compileAllExamples.sh
IDE/Espressif/ESP-IDF/examples/: README.md
IDE/Espressif/ESP-IDF/examples/AWS_IoT_MQTT/: CMakeLists.txt  README.md  sdkconfig.defaults
IDE/Espressif/ESP-IDF/examples/AWS_IoT_MQTT/VisualGDB/: wolfssl_mqtt_aws_iot_IDF_v5.1_ESP32.sln  wolfssl_mqtt_aws_iot_IDF_v5.1_ESP32.vgdbproj
IDE/Espressif/ESP-IDF/examples/AWS_IoT_MQTT/components/wolfmqtt/: CMakeLists.txt  Kconfig  README.md  install_wolfMQTT.cmd
IDE/Espressif/ESP-IDF/examples/AWS_IoT_MQTT/components/wolfmqtt/include/: README.md
IDE/Espressif/ESP-IDF/examples/AWS_IoT_MQTT/main/: CMakeLists.txt  main.c  time_helper.c  wifi_connect.c
IDE/Espressif/ESP-IDF/examples/AWS_IoT_MQTT/main/examples/: README.md
IDE/Espressif/ESP-IDF/examples/AWS_IoT_MQTT/main/examples/aws/: README.md
IDE/Espressif/ESP-IDF/examples/AWS_IoT_MQTT/main/include/: main.h  time_helper.h  wifi_connect.h
IDE/Espressif/ESP-IDF/examples/wolfmqtt_template/: CMakeLists.txt  README.md
IDE/Espressif/ESP-IDF/examples/wolfmqtt_template/VisualGDB/: wolfmqtt_template_IDF_v5.1_ESP32.sln  wolfmqtt_template_IDF_v5.1_ESP32.vgdbproj
IDE/Espressif/ESP-IDF/examples/wolfmqtt_template/components/wolfmqtt/: CMakeLists.txt  Kconfig  README.md  component.mk
IDE/Espressif/ESP-IDF/examples/wolfmqtt_template/components/wolfssl/: CMakeLists.txt  Kconfig  README.md  component.mk
IDE/Espressif/ESP-IDF/examples/wolfmqtt_template/components/wolfssl/include/: config.h  user_settings.h
IDE/Espressif/ESP-IDF/examples/wolfmqtt_template/main/: CMakeLists.txt  main.c
IDE/Espressif/ESP-IDF/examples/wolfmqtt_template/main/include/: main.h
IDE/F767ZI-TOPPERS/: Makefile  README.md  include.am  options.h  user_settings.h  wolfmqtt-F767ZI-TOPPERS.sh
IDE/Microchip-Harmony/: README.md  include.am  mqttnet_harmony.c  wolfmqtt.hconfig
IDE/Microchip-Harmony/mqtt_client/firmware/mqtt_client.X/nbproject/: configurations.xml
IDE/Microchip-Harmony/mqtt_client/firmware/src/: app.c  main.c
IDE/Microchip-Harmony/mqtt_firmware/firmware/src/: app.c
IDE/Microchip-Harmony/wolfmqtt_client/firmware/src/: app.c
IDE/Microchip-Harmony/wolfmqtt_firmware/firmware/src/: app.c  app.h
IDE/QNX/: README.md  include.am
IDE/QNX/wolfmqtt/: .cproject  .project  Makefile  README.md
IDE/STM32CUBE/: README.md  default_conf.ftl  include.am  userio_template.h
certs/: renew.sh
cmake/: functions.cmake  include.am
examples/: include.am  mqtt_log.h  mqttcurl.c  mqttcurl.h  mqttexample.c  mqttexample.h  mqttnet.c  mqttnet.h  mqttport.c  mqttport.h  mqttuart.c  net_libwebsockets.c  net_libwebsockets.h
examples/aws/: awsiot.c  awsiot.h  awsiot.vcxproj
examples/azure/: azureiothub.c  azureiothub.h  azureiothub.vcxproj  azureiothub.vcxproj.filters
examples/firmware/: firmware.h  fwclient  fwclient.c  fwclient.h  fwclient.vcxproj  fwclient.vcxproj.filters  fwpush  fwpush.c  fwpush.h  fwpush.vcxproj  fwpush.vcxproj.filters
examples/mqttclient/: include.am  mqttclient.c  mqttclient.h  mqttclient.vcxproj  mqttclient.vcxproj.filters  mqttnet.c  mqttnet_linux.c  mqttnet_linux.h
examples/mqttsimple/: mqttsimple.c  mqttsimple.h
examples/multithread/: multithread.c  multithread.h  multithread.vcxproj
examples/nbclient/: nbclient.c  nbclient.h  nbclient.vcxproj
examples/pub-sub/: mqtt-pub-sub.h  mqtt-pub.c  mqtt-sub.c
examples/sn-client/: README.md  sn-client.c  sn-client.h  sn-client.vcxproj  sn-client_qos-1.c  sn-client_qos-1.vcxproj  sn-multithread.c  sn-multithread.vcxproj
examples/sparkplug/: README.md  sparkplug.c  sparkplug.h
examples/threadx/: threadx_netx.c
examples/websocket/: mosq_ws.conf  net_libwebsockets.c  net_libwebsockets.h  websocket_client  websocket_client.c
examples/wiot/: wiot.c  wiot.h  wiot.vcxproj
m4/: ax_debug.m4  ax_harden_compiler_flags.m4  have_wolfssl.m4
scripts/: awsiot.test  azureiothub.test  broker.test  broker_multi_client_test.sh  client.test  firmware.test  fuzz.sh  include.am  multithread.test  nbclient.test  sbom.am  stress.test  test_common.sh  tests.test  wiot.test
scripts/broker_test/: ca-cert.pem  include.am  mosquitto.conf  server-cert.pem  server-key.pem
src/: include.am  mqtt_broker.c  mqtt_broker_persist.c  mqtt_broker_persist_posix.c  mqtt_client.c  mqtt_curl.c  mqtt_packet.c  mqtt_sn_client.c  mqtt_sn_packet.c  mqtt_socket.c
src/wolfmqtt/: options.h.in
tests/: include.am  test_broker_connect.c  test_mqtt_client.c  test_mqtt_packet.c  test_mqtt_sn.c  test_mqtt_sn_client.c
tests/fuzz/: broker_fuzz.c  gen_corpus.py  mqtt.dict
wolfmqtt/: include.am  mqtt_broker.h  mqtt_client.h  mqtt_curl.h  mqtt_packet.h  mqtt_sn_client.h  mqtt_sn_packet.h  mqtt_socket.h  mqtt_types.h  options.h.in  version.h  version.h.in  visibility.h  vs_settings.h
zephyr/: CMakeLists.txt  Kconfig  README.md  module.yml  user_settings.h  wolfMQTT_user_settings.h
zephyr/samples/: client.c
zephyr/samples/client/: CMakeLists.txt  prj.conf  sample.yaml  user_settings.h
zephyr/samples/client_tls/: CMakeLists.txt  prj.conf  sample.yaml  user_settings.h
(+17 files in other folders)
